--- a/src/style.css
+++ b/src/style.css
@@ -1,33 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Glegoo&display=swap');
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Glegoo', serif;
-  background-color: #BFBFBF;
+  background-color: #bfbfbf;
 }
 
-h1,h2,h3,h4,h5 {
-  margin: 0px;
-  padding: 0px;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+  padding: 0;
 }
 
 .container {
   width: 70%;
   margin: 2% auto;
-  background-color:#FDE8E8;
-  height:85vh;
+  background-color: #fde8e8;
+  height: 85vh;
   position: relative;
 }
 
 .navbar {
-  background-color: #FF6666;
-  margin-bottom:5px;
+  background-color: #f66;
+  margin-bottom: 5px;
 }
 
-.itemcont{
+.itemcont {
   width: 90%;
-  margin:auto;
+  margin: auto;
   display: flex;
   align-items: center;
   padding: 1%;
@@ -40,7 +45,7 @@ h1,h2,h3,h4,h5 {
 }
 
 #todo {
-  color:white;
+  color: white;
   text-decoration: underline;
 }
 
@@ -49,11 +54,10 @@ h1,h2,h3,h4,h5 {
   grid-gap: 10px;
   grid-template-columns: 1fr 2fr;
   padding: 1%;
-
 }
 
 .projectbar {
-  height:60vh;
+  height: 60vh;
 }
 
 .taskbar {
@@ -62,24 +66,24 @@ h1,h2,h3,h4,h5 {
 
 /* width */
 ::-webkit-scrollbar {
-  width:5px;
+  width: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #FF6666;
+  box-shadow: inset 0 0 5px #f66;
   border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background:#70BDE8;
+  background: #70bde8;
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #5993E5;
+  background: #5993e5;
 }
 
 .p-title {
@@ -92,26 +96,28 @@ h1,h2,h3,h4,h5 {
   padding: 5px;
   background-color: white;
   height: 40vh;
-  overflow-y:scroll;
+  overflow-y: scroll;
 }
+
 .li-item {
   list-style-type: none;
-  background-color:rgba(243, 149, 130, 0.50) ;
+  background-color: rgba(243, 149, 130, 0.5);
   width: 90%;
   margin: 3% auto;
   padding: 5px 10px;
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
-  align-items:center;
-  cursor:default;
+  align-items: center;
+  cursor: default;
 }
 
 .projectform {
   text-align: center;
   width: 100%;
-  margin-top:5%;
+  margin-top: 5%;
 }
+
 #input {
   width: 90%;
   border: none;
@@ -121,48 +127,51 @@ h1,h2,h3,h4,h5 {
   height: 30px;
   padding-left: 10px;
 }
+
 #input:focus {
   outline: none;
-  background-color:#fff0f0;
-  border: 1px #F8A9A9 solid;
+  background-color: #fff0f0;
+  border: 1px #f8a9a9 solid;
   border-radius: 5px;
-
 }
+
 #submitbtn {
-  background-color: #5993E5;
+  background-color: #5993e5;
   border: 1px solid white;
-  color:white;
+  color: white;
   padding: 5px 10px;
   cursor: pointer;
 }
+
 #submitbtn:focus {
   outline: none;
 }
 
 .theading {
-  background-color: #90DAFF;
+  background-color: #90daff;
   display: flex;
   justify-content: space-between;
-  padding:5px 10px;
+  padding: 5px 10px;
 }
 
 #addbtn {
-  background-color: #FF6666;
+  background-color: #f66;
   border: 1px solid white;
-  color:white;
+  color: white;
   padding: 5px 10px;
   cursor: pointer;
 }
+
 #addbtn:focus {
-outline: none;
+  outline: none;
 }
 
-.taskform{
-  margin: 0px;
-  padding:10px;
+.taskform {
+  margin: 0;
+  padding: 10px;
   height: 55vh;
-  background-color:rgba(243, 149, 130, 0.50) ;
-  color:black;
+  background-color: rgba(243, 149, 130, 0.5);
+  color: black;
 }
 
 .taskh {
@@ -172,35 +181,39 @@ outline: none;
   text-align: center;
   width: 50%;
   border-radius: 5px;
-  color:white;
+  color: white;
 }
 
 label {
   width: 98%;
   margin: 1% auto;
   display: block;
-  font-size:80%;
+  font-size: 80%;
 }
 
-#name,#priority,#date,#description {
+#name,
+#priority,
+#date,
+#description {
   display: block;
-  width:98%;
+  width: 98%;
   margin: 1% auto;
   height: 25px;
   border-radius: 5px;
   border: none;
 }
 
-#uname,#upriority,#udate,#udescription {
+#uname,
+#upriority,
+#udate,
+#udescription {
   display: block;
-  width:98%;
+  width: 98%;
   margin: 1% auto;
   height: 25px;
   border-radius: 5px;
   border: none;
 }
-
-
 
 .fbtncont {
   margin: 20px auto;
@@ -210,23 +223,24 @@ label {
 
 .fbtncont button {
   border: 1px solid white;
-  color:white;
+  color: white;
   padding: 5px 10px;
   cursor: pointer;
 }
 
 #tasksubmit {
-  background-color: #5993E5;
+  background-color: #5993e5;
 }
+
 #taskcancel {
   background-color: #ff1a1a;
 }
 
 .tasklist {
-  margin: 0px;
-  padding:10px;
+  margin: 0;
+  padding: 10px;
   height: 55vh;
-  overflow-y:scroll;
+  overflow-y: scroll;
 }
 
 .t-item {
@@ -236,16 +250,16 @@ label {
   border-bottom: 1px rgba(243, 149, 130, 0.54) solid;
   padding: 5px;
   margin: 3% auto 5% auto;
-  color:grey;
+  color: grey;
 }
 
-.ml{
-  margin-left:10px;
+.ml {
+  margin-left: 10px;
 }
 
 .icon {
   cursor: pointer;
-  transition: all .2s ease;
+  transition: all 0.2s ease;
 }
 
 .icon:hover {
@@ -253,8 +267,8 @@ label {
 }
 
 .active {
-  background-color:  #ff1a1a;
-  color:white;
+  background-color: #ff1a1a;
+  color: white;
 }
 
 .hide {
@@ -269,46 +283,46 @@ label {
 }
 
 .taskinfo {
-  height:70vh;
-  background-color:rgba(249, 195, 202, 0.80);
+  height: 70vh;
+  background-color: rgba(249, 195, 202, 0.8);
   position: absolute;
   z-index: 100;
   width: 100%;
   display: none;
 }
 
-.info{
+.info {
   width: 60%;
-  background-color:#FF6666;
-  color:white;
+  background-color: #f66;
+  color: white;
   padding: 10px;
   text-align: center;
   overflow-y: scroll;
   position: relative;
 }
 
-.close{
-  position:absolute;
-  right:10px;
-  top:10px;
+.close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
 }
 
 .close:hover {
   transform: scale(1.3);
 }
 
-
 #taskupdate {
   background-color: #45ba45;
 }
+
 #taskupdatecancel {
   background-color: #ff1a1a;
 }
 
-.taskupdate{
+.taskupdate {
   display: none;
 }
 
-.taskupdate.tshow{
+.taskupdate.tshow {
   display: block;
 }
