--- a/src/style.css
+++ b/src/style.css
@@ -259,6 +259,12 @@ label {
   width: 100%;
   text-align: right;
 }
+.btn-f {
+  color:white;
+  background-color: #f66;
+  border: 1px solid black;
+  padding: 5px 10px;
+}
 
 .active {
   background-color: #ff1a1a;
@@ -299,10 +305,6 @@ label {
   position: absolute;
   right: 10px;
   top: 10px;
-}
-
-.close:hover {
-  transform: scale(1.3);
 }
 
 #taskupdate {
